deploy/automationweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automationweb
  labels:
    app: automationweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: automationweb
  template:
    metadata:
      labels:
        app: automationweb
    spec:
      containers:
      - name: automationweb
        image: roche12/automationtools-automationweb:latest
        ports:
        - containerPort: 7000
        imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: automationweb
spec:
  selector:
    app: automationweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7000
  type: ClusterIP
