deploy/automationweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: automationweb
  name: automationweb
spec:
  ports:
    - name: "7000"
      port: 7000
      targetPort: 7000
  selector:
    app: automationweb
