deploy/automationweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automationweb
  labels:
    app: automationweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: automationweb
  template:
    metadata:
      labels:
        app: automationweb
    spec:
      containers:
      - name: automationweb
        image: roche12/automationtools-automationweb:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 7000
        volumeMounts:
        - name: automation-data
          mountPath: /watched/AutomationData
      volumes:
      - name: automation-data
        persistentVolumeClaim:
          claimName: automation-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: automationweb
spec:
  selector:
    app: automationweb
  ports:
  - protocol: TCP
    port: 7000
    targetPort: 7000
  type: LoadBalancer
