deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automationweb-ingress
  namespace: default
  labels:
    app.kubernetes.io/instance: automationtools
spec:
  ingressClassName: nginx
  rules:
  - host: automationweb
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: automationweb
            port:
              number: 7000
